deploy/k8s/namespace.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: orkest
  labels:
    name: orkest
    environment: production
